--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -1,5 +1,5 @@
 [meta]
-title = "模组简介&资料(包含图片)"
+title = "模组图片资料"
 author = "3987681449"
 version = "1.0.0"
 license = "CC-BY-NC-SA 4.0"
@@ -15,7 +15,7 @@ update_Urls = [
 ["phelp"]
 export = true
 visible = true
-options = ["！模组资料包含图片！\n！含剧透请谨慎使用！\n事前 = 简介\n目前支持：月光舞鞋、望君长留、幽暗之门、你就刚刚好、福尔摩斯(仅有事前)\n\n请根据所需输入对应关键词(请忽视括号及内容)\n例：.draw望君长留\f缩写解释：\n福尔摩斯 = 夏洛克·福尔摩斯症候群"]
+options = ["！模组资料包含图片！\n！含剧透请谨慎使用！\n事前 = 简介\n目前支持：月光舞鞋、望君长留、幽暗之门、你就刚刚好、福尔摩斯(仅有事前)、蓝鲸列车\n\n请根据所需输入对应关键词(请忽视括号及内容)\n例：.draw望君长留\f缩写解释：\n福尔摩斯 = 夏洛克·福尔摩斯症候群\n蓝鲸列车 = 蓝鲸列车·驶向起点的鲸鱼"]
 
 
 # 月光舞鞋
@@ -240,3 +240,45 @@ options = ["关键词：福尔摩斯事前"]
 ["福尔摩斯事前"]
 export = true
 options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E7%A6%8F%E5%B0%94%E6%91%A9%E6%96%AF/%E7%A6%8F1.png?raw=true,type=show]\f[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E7%A6%8F%E5%B0%94%E6%91%A9%E6%96%AF/%E7%A6%8F2.png?raw=true,type=show]\f[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E7%A6%8F%E5%B0%94%E6%91%A9%E6%96%AF/%E7%A6%8F3.png?raw=true,type=show]\f[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E7%A6%8F%E5%B0%94%E6%91%A9%E6%96%AF/%E7%A6%8F4.png?raw=true,type=show]"]
+
+
+# 蓝鲸列车
+["蓝鲸列车"]
+export = true
+visible = true
+options = ["关键词：起点地图/起点101/起点102/起点103/起点105/起点106/起点107"]
+
+["起点地图"]
+export = true
+options = ["[CQ:image,file=
+,type=show]"]
+
+["起点101"]
+export = true
+options = ["[CQ:image,file=
+,type=show]"]
+
+["起点102"]
+export = true
+options = ["[CQ:image,file=
+,type=show]"]
+
+["起点103"]
+export = true
+options = ["[CQ:image,file=
+,type=show]"]
+
+["起点105"]
+export = true
+options = ["[CQ:image,file=
+,type=show]"]
+
+["起点106"]
+export = true
+options = ["[CQ:image,file=
+,type=show]"]
+
+["起点107"]
+export = true
+options = ["[CQ:image,file=
+,type=show]"]
