--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -264,11 +264,15 @@ options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_ct
 ["蓝鲸列车"]
 export = true
 visible = true
-options = ["关键词：蓝列结团/起点地图/起点101/起点102/起点103/起点105/起点106/起点107"]
+options = ["关键词：蓝列结团/起点EDA/起点地图/起点101/起点102/起点103/起点105/起点106/起点107"]
 
 ["蓝列结团"]
 export = true
 options = ["收集奖励\n此模组集并非战役，但其中都包含“死亡会发出蓝色的光”信息。虽然这对单个模组来说没有什么特殊意义，但还是准备了收集奖励以感谢完成模组的您。\n\n收集数量1\nSAN+1D3\n\n收集数量2\nSAN+1D3+1\n医学+1\n\n收集数量3\nSAN+1D3+3\n医学+1D6"]
+
+["起点EDA"]
+export = true
+options = ["报酬\nSAN+1D3\n\n每人一个AF\n如果探索者超过4人，则通过沟通或骰子决定报酬的获得者。\n即使少于3人，每人也只能获得一个报酬。\n\n【鱼形耳环】\n925金属耳环承载着某位工匠的感激之情。\n持有/装备时谈判类技能+10\n\n【老式钢笔】\n会令记者喜爱的贵重老式钢笔。\n持有时探索类技能+10\n\n【皮革项链】×2\n装满超心理学家和登山家祈祷的项链。\n适合送给送给珍视之人。\n持有时可避免一次SANc，或在未使用时推迟即将发生的疯狂发作。"]
 
 ["起点地图"]
 export = true
