--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -15,7 +15,7 @@ update_Urls = [
 ["phelp"]
 export = true
 visible = true
-options = ["！模组资料包含图片！\n！含剧透请谨慎使用！\n事前 = 简介\n目前支持：月光舞鞋、望君长留、幽暗之门、你就刚刚好、福尔摩斯(仅有事前)、蓝鲸列车\n\n请根据所需输入对应关键词(请忽视括号及内容)\n例：.draw望君长留\f缩写解释：\n福尔摩斯 = 夏洛克·福尔摩斯症候群\n蓝鲸列车 = 蓝鲸列车·驶向起点的鲸鱼"]
+options = ["！模组资料包含图片！\n！含剧透请谨慎使用！\n目前支持：月光舞鞋、望君长留、幽暗之门、你就刚刚好、福尔摩斯(仅有事前)、蓝鲸列车、沉睡\n\n请根据所需输入对应关键词(请忽视括号及内容)\n例：.draw望君长留\f缩写解释：\n福尔摩斯 = 夏洛克·福尔摩斯症候群\n蓝鲸列车 = 蓝鲸列车·驶向起点的鲸鱼\n沉睡 = 沉睡的月亮歌姬"]
 
 
 
@@ -301,3 +301,35 @@ options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_ct
 ["起点107"]
 export = true
 options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E8%93%9D%E9%B2%B8%E5%88%97%E8%BD%A6%C2%B7%E9%A9%B6%E5%90%91%E8%B5%B7%E7%82%B9%E7%9A%84%E9%B2%B8%E9%B1%BC/107.jpg?raw=true,type=show]"]
+
+
+
+
+
+# 沉睡的月亮歌姬
+["沉睡"]
+export = true
+visible = true
+options = ["关键词：沉睡流程图/大空月夜/大空朝阳"]
+
+["沉睡流程图"]
+export = true
+options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E6%B2%89%E7%9D%A1%E7%9A%84%E6%9C%88%E4%BA%AE%E6%AD%8C%E5%A7%AC/%E6%B5%81%E7%A8%8B%E5%9B%BE.png?raw=true,type=show]"]
+
+["大空月夜"]
+export = true
+options = ["[CQ:image,file=,type=show]"]
+
+["大空朝阳"]
+export = true
+options = ["[CQ:image,file=,type=show]"]
+
+
+
+
+
+
+
+[""]
+export = true
+options = ["[CQ:image,file=,type=show]"]
