--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -508,7 +508,7 @@ options = ["报酬\nHP+1D10\nSAN+1D10"]
 
 
 # 革命少女罗丹斯
-["SSF"]
+["罗丹斯"]
 export = true
 visible = true
 options = ["关键词：罗丹斯流程/佐藤爱/黑葛原真由理"]
@@ -549,14 +549,3 @@ options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_ct
 [""]
 export = true
 options = ["[CQ:image,file=,type=show]"]
-
-
-
-
-
-
-
-
-
-
-# 
